# eventapp

./: README.md  pyproject.toml  requirements.txt
apps/account/: admin.py  managers.py  models.py  tests.py
apps/account/migrations/: 0001_initial.py
apps/event/: admin.py  models.py  urls.py  views.py
apps/event/migrations/: 0001_initial.py
core/: settings.py  urls.py
static/css/: style.css
templates/: base.html  event_detail.html
templates/includes/: footer.html  header.html
